<?xml version="1.0"?>
<package format="2">
  <name>rviz_satellite</name>
  <version>0.0.3</version>
  <description>Display satellite map tiles in RViz</description>
  <author>Gareth Cross</author>
  <maintainer email="gcross.code@icloud.com">gcross</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
